K1J-1983: Add Spotless code formatter and reformat project (#899)